# jetbot_Robot_system

./: README.md
moto_ctrl_ws/: rebuild.sh
moto_ctrl_ws/src/ros_moto_ctrl/: CMakeLists.txt  package.xml
moto_ctrl_ws/src/ros_moto_ctrl/config/: config0.yaml  config0_bak.yaml
moto_ctrl_ws/src/ros_moto_ctrl/include/: Searcher.h  SysCtrl.h  parameters.h  utils.h
moto_ctrl_ws/src/ros_moto_ctrl/scripts/: auto_avoid.py  avoid_ctrl.py  avoid_stereo_ctrl.py  controler.py  key_ctrl.py  moving_function.py  subscriber.py
moto_ctrl_ws/src/ros_moto_ctrl/src/: Searcher.cpp  SysCtrl.cpp  codetest.cpp  main_auto_avoid.cpp  main_bottle_searcher.cpp  main_record_traing.cpp  main_stereo.cpp  parameters.cpp  utils.cpp
